--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: GitHub Pages
+
 on:
   push:
     branches:
       - hexo
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,10 +19,10 @@ jobs:
           node-version: "14.x"
 
       - run: yarn
-      - name: algolia
-        env:
-          HEXO_ALGOLIA_INDEXING_KEY: ${{ secrets.HEXO_ALGOLIA_INDEXING_KEY }}
-        # run: yarn algolia
+      # - name: algolia
+      #   env:
+      #     HEXO_ALGOLIA_INDEXING_KEY: ${{ secrets.HEXO_ALGOLIA_INDEXING_KEY }}
+      #   run: yarn algolia
       - run: yarn build
 
       - name: Deploy
