--- a/source/_data/yun.yml
+++ b/source/_data/yun.yml
@@ -88,7 +88,7 @@ banner:
     icon: icon-arrow-down-s-line
 
 reward:
-  enable: flase
+  enable: false
   icon: icon-hand-coin-line
   comment: I'm so cute. Please give me money.
   # url: https://github.com/YunYouJun/yunyoujun.github.io/issues/96
@@ -123,3 +123,6 @@ permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
+
+comment:
+  enable:false
